plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'edu.sc.seis.launch4j' version '3.0.6'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url "https://maven.org/processing" }
}

dependencies {
    implementation 'org.processing:core:3.3.7'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Définir plusieurs classes principales pour différentes applications
application {
    mainClassName = 'fr.iamacat.PEmbroiderLauncher'
}

// Importer le plugin ShadowJar
import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

// Configuration du plugin Shadow pour générer le JAR
shadowJar {
    archiveFileName = 'untitled-dependencies.jar'
}


// Configuration du Launch4j
launch4j {
    mainClassName = 'fr.iamacat.PEmbroiderLauncher' // Utiliser le lanceur comme classe principale
    jreMinVersion = '17'
    initialHeapSize = 512
    maxHeapSize = 4096
    jvmOptions = [
            '-XX:+UseZGC'
    ]
    jarTask = tasks.named("shadowJar")  // Utiliser la tâche shadowJar pour le JAR
    outputDirectory = file("$buildDir/libs")
    outfile = 'Catz-EmbroideryLauncher.exe'  // Nom de l'exécutable
    copyConfigurable = files(tasks.named("shadowJar").get().archiveFile)
}

// Tâches pour chaque application (Editor, Converter)

task buildEditor(type: ShadowJar) {
    archiveFileName = 'PEmbroiderEditor.jar'
    manifest {
        attributes 'Main-Class': 'fr.iamacat.PEmbroiderEditor'
    }
}

task buildConverter(type: ShadowJar) {
    archiveFileName = 'PEmbroiderConverter.jar'
    manifest {
        attributes 'Main-Class': 'fr.iamacat.PEmbroiderConverter'
    }
}

// Configurer la tâche de build globale
tasks.named("build") {
    dependsOn buildEditor, buildConverter
    finalizedBy tasks.named("createExe")
}
